# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/en/

Version 9.1.0

  - Fix for Bug#110586 (Bug#35254470), got unexpected result when the data type was set to ZEROFILL.

Version 9.0.0

  - WL#16391, Upgrade 3rd party libraries and tools.

  - Fix for Bug#114800 (Bug#36576596), Wrong code by an old patch.

  - Fix for Bug#114846 (Bug#36574322), Auto-closeable X dev session.
    Thanks to Daniel Kec for his contribution.

  - Fix for Bug#114989 (Bug#36612566), Setting null value in setClientInfo throws an NPE.

  - WL#16376, Set 'caching_sha2_password' as default fallback authentication plugin.

  - WL#16342, Update MySQL error codes mapping.

  - WL#16353, Refresh the list of acceptable TLS ciphers.

  - Fix for Bug#114687 (Bug#36529541), Tests fail after mysql_native_password has been made optional in server.

  - WL#16319, Remove deprecated insensitive terminology based methods.

  - WL#16324, Update static MySQL keywords list.

  - Fix for Bug#110512 (Bug#35223851), Contribution: Replace synchronized with ReentrantLock.
    Thanks to Bart De Neuter and Janick Reynders for their contributions.

  - Fix for Bug#108830 (Bug#34721173), LIMIT clause, setMaxRows and cursor combined returns wrong number or rows.

Version 8.4.0

  - WL#15706, Add OpenTelemetry tracing.

  - WL#16174, Support for VECTOR data type.

  - Fix for Bug#36380711, Tests failing due to removal of deprecated features.

  - Fix for Bug#113600 (Bug#36171575), Contribution: Fix join condition for retrieval of imported primary keys.
    Thanks to Henning Pöttker for his contribution.

  - WL#16196, GPL License Exception Update.

  - Fix for Bug#111031 (Bug#35392222), Contribution: Update SyntaxRegressionTest.java.
    Thanks to Abby Palmero for her contribution.

  - Fix for Bug#113599 (Bug#36171571), Contribution: Replace StringBuffer with StringBuilder in ValueEncoders.
    Thanks to Henning Pöttker for his contribution.
